--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@ function loadXMLDoc() {
     xmlhttp.open("GET", "https://spreadsheets.google.com/tq?key=1HvdRsBKvkkU1nYuKez0SoqdTXrZjSd3L83JLgcFMASI", true);
     xmlhttp.send();
 }
-window.loadXMLDoc = loadXMLDoc;
-//window.onload = loadXMLDoc;
+//window.loadXMLDoc = loadXMLDoc;
+window.onload = loadXMLDoc;
 </script>
 <div id="myDiv"></div>
   </body>
