--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ function loadXMLDoc() {
         }
     };
 
-    xmlhttp.open("GET", "https://spreadsheets.google.com/tq?key=1HvdRsBKvkkU1nYuKez0SoqdTXrZjSd3L83JLgcFMASI", true);
+    xmlhttp.open("GET", "https://docs.google.com/spreadsheets/d/1HvdRsBKvkkU1nYuKez0SoqdTXrZjSd3L83JLgcFMASI/edit?usp=sharing", true);
     xmlhttp.send();
 }
 //window.loadXMLDoc = loadXMLDoc;
