--- a/index.html
+++ b/index.html
@@ -10,87 +10,14 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
   
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-
+    <script src="https://cloud.github.com/downloads/wycats/handlebars.js/handlebars-1.0.0.beta.6.js"></script>
   </head>
 
   <body>
     <p>Google Sheets test</p>
 
 
-   <script type="text/javascript">
-
-    
-
-function loadXMLDoc() {
-    var xmlhttp = new XMLHttpRequest();
-
-    xmlhttp.onreadystatechange = function() {
-        if (xmlhttp.readyState == XMLHttpRequest.DONE ) {
-           if (xmlhttp.status == 200) {
-               handleData(JSON.parse(xmlhttp.responseText));
-               //document.getElementById("myDiv").innerHTML = xmlhttp.responseText;
-           }
-           else if (xmlhttp.status == 400) {
-              alert('There was an error 400');
-           }
-           else {
-               alert('something else other than 200 was returned');
-           }
-        }
-    };
-
-    xmlhttp.open("GET", "https://spreadsheets.google.com/feeds/list/1HvdRsBKvkkU1nYuKez0SoqdTXrZjSd3L83JLgcFMASI/1/public/basic?alt=json", true);
-     //"https://docs.google.com/spreadsheets/d/1HvdRsBKvkkU1nYuKez0SoqdTXrZjSd3L83JLgcFMASI/pubhtml", true);//"https://docs.google.com/spreadsheets/d/1HvdRsBKvkkU1nYuKez0SoqdTXrZjSd3L83JLgcFMASI/edit?usp=sharing", true);
-    xmlhttp.send();
-
-    //https://spreadsheets.google.com/feeds/list/1HvdRsBKvkkU1nYuKez0SoqdTXrZjSd3L83JLgcFMASI/1/public/basic?alt=json-in-script&callback=JSON_CALLBACK
-}
-
-
-function handleData(data) {    
-    var rows = [];
-    console.log(data.feed);
-    var cells = data.feed.entry;
-
-    for (var i = 0; i < cells.length; i++){
-        var rowObj = {};
-        rowObj.timestamp = cells[i].title.$t;
-        var rowCols = cells[i].content.$t.split(',');
-        for (var j = 0; j < rowCols.length; j++){
-            var keyVal = rowCols[j].split(':');
-            rowObj[keyVal[0].trim()] = keyVal[1].trim();
-        }
-        rows.push(rowObj);
-    }
-    
-    document.getElementById("myDiv").innerHTML = JSON.stringify(rows);
-}
-
-//window.loadXMLDoc = loadXMLDoc;
-
-
-window.onload = () => {
-    loadXMLDoc();
-    var iframe = document.getElementById("theForm");
-    console.log(window.innerWidth)
-    iframe.width = window.innerWidth;
-    iframe.height = window.innerHeight;
-    //iframe.onload = iframeLoaded;
-}
-
-
-//onload="iframeLoaded()"
-// function iframeLoaded() {
-//       var iFrameID = document.getElementById('theForm');
-//       if(iFrameID) {
-//             // here you can make the height, I delete it first, then I make it again
-//             iFrameID.width = window.innerWidth;
-//             iFrameID.height = "";
-//             iFrameID.height = iFrameID.contentWindow.document.body.scrollHeight + "px";
-//       }   
-//   }
-
-</script>
+   <script type="text/javascript" src="index.js"></script>
 <div id="myDiv"></div>
 
 <iframe id="theForm"  src="https://docs.google.com/forms/d/e/1FAIpQLSd55AHvbdwG03SGqonhR-8qv2MnNqK00lLwDFJK3-u_rwAPCQ/viewform?embedded=true" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
