--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
             integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
             crossorigin="anonymous"></script>
     <script src="semantic/dist/semantic.min.js"></script>
+    <script type="text/javascript" src="index.js"></script>
+
     <link rel="stylesheet" href="index.css"></link>
 </head>
 <body>
@@ -60,10 +62,10 @@
                 </div>
             </div>
         </div>
-    </div id=>
+    </div>
 
-    <div class="ui attached segment">
-        <p>FORMS</p>
+    <div class="ui attached segment" id="formElement">
+      <iframe id="theForm" src="https://docs.google.com/forms/d/e/1FAIpQLSerGwiR4fCOwXiHPIZOg7A44UpdxLPdqVwrpAOI20Up0L-pLg/viewform?embedded=true" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
     </div>
 </div>
 </body>
