fix(index): add myDiv

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
             crossorigin="anonymous"></script>
     <script src="semantic/dist/semantic.min.js"></script>
     <script type="text/javascript" src="index.js"></script>
+    <script type="text/javascript" src="index2.js"></script>
 
     <link rel="stylesheet" href="index.css"></link>
 </head>
@@ -67,6 +68,8 @@
     <div class="ui attached segment" id="formElement">
       <iframe id="theForm" src="https://docs.google.com/forms/d/e/1FAIpQLSerGwiR4fCOwXiHPIZOg7A44UpdxLPdqVwrpAOI20Up0L-pLg/viewform?embedded=true" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
     </div>
+
+    <div id="myDiv"></div>
 </div>
 </body>
 </html>
