--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             </h1>
         </div>
     </div>
-    <div class="ui attached segment">
+    <div class="ui attached segment" id="summary">
         <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
             industry's
             standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to
