fix(index.html): various fixes

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Google Sheets example</title>
+    <title>Foothills United Way - Day of Caring</title>
     <meta charset='utf-8'/>
     <link rel="stylesheet" type="text/css" href="semantic/dist/semantic.min.css">
     <script
@@ -10,9 +10,10 @@
             crossorigin="anonymous"></script>
     <script src="semantic/dist/semantic.min.js"></script>
     <script type="text/javascript" src="index.js"></script>
-    <script type="text/javascript" src="index2.js"></script>
 
     <link rel="stylesheet" href="index.css"></link>
+
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 </head>
 <body>
 <div class="ui container">
