--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <div class="ui attached segment">
         <div class="ui items">
             <div class="item">
-                <div class="ui small circular image">
+                <div class="ui small image">
                     <img src="person-placeholder.jpg" alt="Hi">
                 </div>
                 <div class="content">
